inter/y.output

state 0
	$accept: .top $end 
	top: .    (1)

	'('  shift 9
	'\''  shift 8
	NUMBER  shift 4
	IDENT  shift 3
	STRING  shift 5
	BOOL  shift 6
	.  reduce 1 (src line 31)

	top  goto 1
	expr  goto 7
	atom  goto 2

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  atom.    (2)

	.  reduce 2 (src line 35)


state 3
	atom:  IDENT.    (11)

	.  reduce 11 (src line 55)


state 4
	atom:  NUMBER.    (12)

	.  reduce 12 (src line 57)


state 5
	atom:  STRING.    (13)

	.  reduce 13 (src line 58)


state 6
	atom:  BOOL.    (14)

	.  reduce 14 (src line 59)


state 7
	atom:  expr.    (15)

	.  reduce 15 (src line 60)


state 8
	atom:  '\''.atom 

	'('  shift 9
	'\''  shift 8
	NUMBER  shift 4
	IDENT  shift 3
	STRING  shift 5
	BOOL  shift 6
	.  error

	expr  goto 7
	atom  goto 10

state 9
	expr:  '('.')' 
	expr:  '('.atoms ')' 
	expr:  '('.atom '.' atom ')' 
	expr:  '('.atom '.' ')' 
	expr:  '('.'.' atom ')' 
	expr:  '('.'.' ')' 

	'('  shift 9
	')'  shift 11
	'.'  shift 14
	'\''  shift 8
	NUMBER  shift 4
	IDENT  shift 3
	STRING  shift 5
	BOOL  shift 6
	.  error

	expr  goto 7
	atom  goto 13
	atoms  goto 12

state 10
	atom:  '\'' atom.    (16)

	.  reduce 16 (src line 61)


state 11
	expr:  '(' ')'.    (3)

	.  reduce 3 (src line 40)


state 12
	expr:  '(' atoms.')' 

	')'  shift 15
	.  error


state 13
	expr:  '(' atom.'.' atom ')' 
	expr:  '(' atom.'.' ')' 
	atoms:  atom.    (9)
	atoms:  atom.atoms 

	'('  shift 9
	'.'  shift 16
	'\''  shift 8
	NUMBER  shift 4
	IDENT  shift 3
	STRING  shift 5
	BOOL  shift 6
	.  reduce 9 (src line 51)

	expr  goto 7
	atom  goto 18
	atoms  goto 17

state 14
	expr:  '(' '.'.atom ')' 
	expr:  '(' '.'.')' 

	'('  shift 9
	')'  shift 20
	'\''  shift 8
	NUMBER  shift 4
	IDENT  shift 3
	STRING  shift 5
	BOOL  shift 6
	.  error

	expr  goto 7
	atom  goto 19

state 15
	expr:  '(' atoms ')'.    (4)

	.  reduce 4 (src line 42)


state 16
	expr:  '(' atom '.'.atom ')' 
	expr:  '(' atom '.'.')' 

	'('  shift 9
	')'  shift 22
	'\''  shift 8
	NUMBER  shift 4
	IDENT  shift 3
	STRING  shift 5
	BOOL  shift 6
	.  error

	expr  goto 7
	atom  goto 21

state 17
	atoms:  atom atoms.    (10)

	.  reduce 10 (src line 53)


state 18
	atoms:  atom.    (9)
	atoms:  atom.atoms 

	'('  shift 9
	'\''  shift 8
	NUMBER  shift 4
	IDENT  shift 3
	STRING  shift 5
	BOOL  shift 6
	.  reduce 9 (src line 51)

	expr  goto 7
	atom  goto 18
	atoms  goto 17

state 19
	expr:  '(' '.' atom.')' 

	')'  shift 23
	.  error


state 20
	expr:  '(' '.' ')'.    (8)

	.  reduce 8 (src line 46)


state 21
	expr:  '(' atom '.' atom.')' 

	')'  shift 24
	.  error


state 22
	expr:  '(' atom '.' ')'.    (6)

	.  reduce 6 (src line 44)


state 23
	expr:  '(' '.' atom ')'.    (7)

	.  reduce 7 (src line 45)


state 24
	expr:  '(' atom '.' atom ')'.    (5)

	.  reduce 5 (src line 43)


13 terminals, 5 nonterminals
17 grammar rules, 25/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 14/240000
20 extra closures
50 shift entries, 1 exceptions
10 goto entries
8 entries saved by goto default
Optimizer space used: output 58/240000
58 table entries, 10 zero
maximum spread: 11, maximum offset: 16
